plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.5'   // ✅ FIX: dùng bản ổn định
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'
description = 'FoodHub'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    // 🌐 Web (FIX: dùng web thay vì webmvc)
    implementation 'org.springframework.boot:spring-boot-starter-web'

    // 🔐 Security
    implementation 'org.springframework.boot:spring-boot-starter-security'

    // 🎨 Thymeleaf
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
    implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'

    // 🗄️ JPA
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

    // 🐬 MySQL
    runtimeOnly 'com.mysql:mysql-connector-j'

    // 🧰 Lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // 🔄 DevTools
    developmentOnly 'org.springframework.boot:spring-boot-devtools'

    // 🔑 JWT
    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'

    // 🧪 Test
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

tasks.named('test') {
    useJUnitPlatform()
}